Temp fix for widgets overlapping next step. Fix width trigger point

--- a/css/interactive-guides/main.scss
+++ b/css/interactive-guides/main.scss
@@ -138,6 +138,12 @@ instruction.unavailable {
   text-align:left;
 }
 
+.stepWidgetContainer {
+    @media (max-width: 1170px) {
+        overflow: auto;
+    }
+}
+
 samp {
   font-size:13px;
   padding: 9.5px;
